# webbed-city

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
cert/: _cert.pem
city-core/: Cargo.toml
city-core/src/: game.rs  lib.rs
src/: App.vue  main.ts
src/components/: BoardComponent.vue  GameComponent.vue  GameLobby.vue  HeaderComponent.vue  RoomList.vue  UserStats.vue  WebSocketStatus.vue  WelcomeSection.vue
src/composables/: useWebSocket.ts
src/router/: index.ts
src/services/: api.ts  index.ts
src/services/matchmaking/: index.ts
src/services/rooms/: index.ts  types.ts
src/services/users/: index.ts  types.ts
src/services/websockets/: index.ts  types.ts
src/stores/: user.ts  websocket.ts
src/utils/: base64.ts
src/views/: GameView.vue  IndexView.vue  LoginView.vue  PlayView.vue  RegisterView.vue  WebSocketTestView.vue
